Changed styles for events page

--- a/web/src/app/components/event-card/event-card.component.css
+++ b/web/src/app/components/event-card/event-card.component.css
@@ -1,3 +1,13 @@
 .image {
   height: 100%;
 }
+
+.card {
+  height: 100%;
+  margin: 1em 2em;
+}
+
+.table td > div {
+  height: 3em;
+  overflow: hidden;
+}
