--- a/web/src/app/routes/events-page/components/events-table/events-table.component.css
+++ b/web/src/app/routes/events-page/components/events-table/events-table.component.css
@@ -1,3 +1,11 @@
-.card {
-  margin: 48px;
+.events {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+}
+
+@media screen and (max-width: 768px) {
+  .events {
+    flex-direction: column;
+  }
 }
