--- a/web/src/app/routes/events-page/events-page.component.css
+++ b/web/src/app/routes/events-page/events-page.component.css
@@ -1,30 +1,4 @@
-:host {
-  width: 100%;
-}
-
-.top-panel {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  position: sticky;
-  top: 0;
-  flex-flow: row wrap;
-  z-index: 1;
-  height: 100px;
-}
-
-.add-button {
-  grid-area: 1 / 2 / 2 / 3;
-  align-self: center;
-  justify-self: end;
-  margin-right: 20px;
-}
-
-.header {
-  grid-area: 1 / 1 / 2 / 3;
-}
-
 .events {
   display: flex;
-  align-items: center;
-  flex-flow: column wrap;
+  justify-content: center;
 }
