--- a/web/src/app/components/event-card/event-card.component.html
+++ b/web/src/app/components/event-card/event-card.component.html
@@ -1,4 +1,4 @@
-<div class="card text-white bg-secondary mb-4 event-card" style="width: 40rem;">
+<div class="card text-white bg-secondary mb-4 event-card">
   <div class="card-body">
     <div class="row">
       <div class="col-sm-6">
