--- a/web/src/app/routes/event-page/event-page.component.html
+++ b/web/src/app/routes/event-page/event-page.component.html
@@ -70,22 +70,19 @@
             </tr>
           </tbody>
         </table>
-        <!-- <app-attendees-table
-          *ngIf="participants.length > 0"
-          [eventOwner]="eventOwner"
-          (remove)="removeUser($event)"
-          title="Участники"
-          [attendees]="participants"
-          [eventId]="eventId"
-        >
-        </app-attendees-table> -->
       </div>
     </div>
     <div *ngIf="event.attendees.length > 0" class="attendees-table">
       <app-attendee-table
+        *ngIf="isSingle"
         [attendees]="event.attendees"
         [event]="event"
       ></app-attendee-table>
+      <app-attendees-table
+        *ngIf="isPair"
+        [event]="event"
+      >
+      </app-attendees-table>
     </div>
   </div>
 </div>
