--- a/web/src/app/routes/event-page/components/attendee-table/attendee-table.component.html
+++ b/web/src/app/routes/event-page/components/attendee-table/attendee-table.component.html
@@ -8,7 +8,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let attendee of attendees; let i = index">
+    <tr *ngFor="let attendee of attendees; let i = index;">
       <td>{{ i + 1 }}</td>
       <td>{{ attendee.name }}</td>
       <td>{{ attendee.rating }}</td>
