--- a/web/src/app/components/invite-user-button/invite-user-button.component.html
+++ b/web/src/app/components/invite-user-button/invite-user-button.component.html
@@ -10,7 +10,33 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Пригласить пользователя</h5>
+        <ul class="nav nav-tabs" role="tablist">
+          <li class="nav-item">
+            <a
+              class="nav-link active"
+              id="invite-user-tab"
+              data-toggle="tab"
+              aria-controls="invite-user"
+              aria-selected="true"
+              href="#invite-user"
+            >
+              <h5 class="modal-title">Пригласить</h5>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a
+              class="nav-link"
+              id="joined-users-tab"
+              data-toggle="tab"
+              href="#joined-users"
+              role="tab"
+              aria-controls="joined-users"
+              aria-selected="false"
+            >
+              <h5 class="modal-title">Присоединятся</h5>
+            </a>
+          </li>
+        </ul>
         <button
           type="button"
           class="close"
@@ -20,26 +46,43 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <form
-        class="form"
-        [formGroup]="inviteForm"
-        (ngSubmit)="inviteUser($event)"
-      >
-        <div class="modal-body">
-          <div class="form-group">
-            <ng-select [searchable]="true" id="select" autofocus formControlName="invitedUser">
-              <ng-option *ngFor="let user of users;" value="user.id">
-                  <span>{{ user.name }}</span>
-                  <span class="ml-2">{{ user.rating }}</span>
-              </ng-option>
-            </ng-select>
+      <div class="tab-content">
+        <div
+          class="tab-pane fade show active"
+          id="invite-user"
+          role="tabpanel"
+          aria-labelledby="invite-user-tab"
+        >
+          <form
+            class="form"
+            [formGroup]="inviteForm"
+            (ngSubmit)="inviteUser($event)"
+          >
+            <div class="modal-body">
+              <div class="form-group">
+                <ng-select
+                  [searchable]="true"
+                  id="select"
+                  autofocus
+                  formControlName="invitedUser"
+                >
+                  <ng-option *ngFor="let user of users" value="user.id">
+                    <span>{{ user.name }}</span>
+                    <span class="ml-2">{{ user.rating }}</span>
+                  </ng-option>
+                </ng-select>
+              </div>
+            </div>
+          </form>
+          <div class="modal-footer">
+            <button type="submit" class="btn btn-primary">
+              Сохранить
+            </button>
           </div>
         </div>
-      </form>
-      <div class="modal-footer">
-        <button type="submit" class="btn btn-primary">
-          Сохранить
-        </button>
+        <div clas="tab-pane fade" id="joined-users" role="tabpanel" aria-labelledby="joined-users-tab">
+          
+        </div>
       </div>
     </div>
   </div>
