--- a/web/src/app/routes/event-page/components/attendees-table/attendees-table.component.html
+++ b/web/src/app/routes/event-page/components/attendees-table/attendees-table.component.html
@@ -78,7 +78,7 @@
       <th>Первый участник</th>
       <th>Второй участник</th>
       <th>Сумарный рейтинг</th>
-      <th>Статус</th>
+      <th *ngIf="eventOwner">Статус</th>
     </tr>
   </thead>
   <tbody>
@@ -87,17 +87,25 @@
     >
       <tr>
         <td>{{ i + 1 }}</td>
-        <td>
+        <td>          
           {{ attendee.attendeeName }}
           <span class="ml-2">{{ attendee.attendeeRating }}</span>
         </td>
         <td>
           <span *ngIf="attendee.teammateName; else invite_teammate">
-            {{ attendee.teammateName }}
+            <span *ngIf="!attendee.isPair" class="mr-2">Приглашен: </span>
+            <span>{{ attendee.teammateName }} </span>
             <span class="ml-2">{{ attendee.teammateRating }}</span>
+            <span class="ml-2">
+              <a href="#" (click)="dismissInvite()">
+                <span *ngIf="attendee.isPair">Покинуть команду</span>
+                <span *ngIf="!attendee.isPair">Отменить приглашение</span>
+              </a>
+            </span>
           </span>
           <ng-template #invite_teammate>
             <app-invite-user-button
+              [event]="event"
               *ngIf="
                 currentUser &&
                   currentUser.id === attendee.id;
@@ -108,12 +116,7 @@
           <ng-template #join_team>
             <a
               href="#"
-              *ngIf="
-                !attendee.pairedUserId &&
-                currentUser &&
-                currentUser.id !== attendee.id &&
-                currentUser.pairedUserId !== attendee.id
-              "
+              *ngIf="currentUser"
               (click)="pairWithUser(attendee.id)"
             >
               Присоединиться
@@ -121,7 +124,7 @@
           </ng-template>
         </td>
         <td>{{ attendee.totalRating }}</td>
-        <td [ngSwitch]="attendee.status">
+        <td *ngIf="eventOwner" [ngSwitch]="attendee.status">
           <div *ngSwitchCase="'join_request'">
             <span>Желает присоединиться</span>
             <a href="#" class="ml-2" (click)="accept(attendee.userId)"
