Fixed bug on login form (Vk auth button was pressed by enter)

--- a/web/src/app/components/login-form/login-form.component.html
+++ b/web/src/app/components/login-form/login-form.component.html
@@ -68,7 +68,7 @@
               </div>
             </div>
             <div class="modal-footer">
-              <button class="btn btn-info" (click)="handleVkLogin()">
+              <button type="button" class="btn btn-info" (click)="handleVkLogin()">
                 <span class="btn-label mr-2"><i class="fa fa-vk"></i></span>
                 Войти через VK
               </button>
