--- a/web/src/app/components/sidebar/sidebar.component.html
+++ b/web/src/app/components/sidebar/sidebar.component.html
@@ -9,9 +9,9 @@ style="margin-bottom: 20px">
     </li>
   </ul>
   <ng-container *ngFor="let action of actions">
-  <app-add-event-button *ngIf="action === 'add'"></app-add-event-button>
-  <app-edit-user-button *ngIf="action === 'edit'"></app-edit-user-button>
-  <app-edit-event-button *ngIf="action === 'edit-event'"></app-edit-event-button>
+  <app-add-event-button *ngIf="authorized && action === 'add'"></app-add-event-button>
+  <app-edit-user-button *ngIf="authorized && action === 'edit'"></app-edit-user-button>
+  <app-edit-event-button *ngIf="authorized && action === 'edit-event'"></app-edit-event-button>
   </ng-container>
   <ul class="navbar-nav">
     <li class="nav-item">
