--- a/web/src/app/routes/user-page/user-page.component.html
+++ b/web/src/app/routes/user-page/user-page.component.html
@@ -1,5 +1,6 @@
 <div *ngIf="user">
   <app-sidebar
+    current="profile"
     (showAddEventClick)="showAddPopup()"
     [actions]="sidebarActions"
   ></app-sidebar>
