--- a/web/src/app/routes/event-page/components/attendees-table/attendees-table.component.css
+++ b/web/src/app/routes/event-page/components/attendees-table/attendees-table.component.css
@@ -1,3 +1,10 @@
 th, td {
   vertical-align: middle;
 }
+.table {
+  font-size: 1.1rem;
+}
+
+.table-hover tbody tr:hover {
+  background-color: rgba(255,255,255,0.075); 
+}
