--- a/web/src/app/routes/events-page/events-page.component.html
+++ b/web/src/app/routes/events-page/events-page.component.html
@@ -1,5 +1,5 @@
 <app-sidebar
-  title="Соревнования"
+  current="events"
   (showAddEventClick)="showAddPopup()"
   (loginClick)="showLoginPopup()"
   [actions]="sidebarActions"
