--- a/web/src/app/routes/notifications-page/components/notifications-table/notifications-table.component.html
+++ b/web/src/app/routes/notifications-page/components/notifications-table/notifications-table.component.html
@@ -1,14 +1,73 @@
 <ul class="list-group" *ngFor="let notification of notifications">
-  <li *ngIf="notification.type === 'pair_invite'" class="list-group-item list-group-item-action d-inline-flex align-items-center">
-    <span class="message">Пользователь {{notification.sentByUser.name}} приглашает сыграть с ним в турнире {{notification.event.name}}</span>
+  <li
+    *ngIf="notification.type === 'pair_invite'"
+    class="list-group-item list-group-item-action d-inline-flex align-items-center"
+  >
+    <span class="message"
+      >Пользователь<a href="#" [routerLink]="['/users', notification.sentBy]">
+        {{ notification.sentByUser.name }}
+      </a>
+      приглашает сыграть с ним в турнире
+      <a href="#" [routerLink]="['/events', notification.eventId]">{{
+        notification.event.name
+      }}</a></span
+    >
     <ul class="notification-actions d-inline-flex">
-        <li class="accept mr-2">
-          <button type="button" class="btn btn-primary">Присоединиться</button>
-        </li>
-        <li class="dismiss ml-2">
-          <button type="button" class="btn btn-primary">Отказать</button>
-        </li>
-      </ul>
+      <li class="accept mr-2">
+        <button
+          type="button"
+          class="btn btn-primary"
+          (click)="pairWithUser(notification)"
+        >
+          Присоединиться
+        </button>
+      </li>
+      <li class="dismiss ml-2">
+        <button
+          type="button"
+          (click)="dismissInviteNotification(notification)"
+          class="btn btn-primary"
+        >
+          Отказать
+        </button>
+      </li>
+    </ul>
   </li>
-  <li *ngIf="notification.type === 'event_invited'" class="list-group-item list-group-item-action">Пользователь {{notification.sentByUser.name}} приглашает сыграть в турнире {{notification.event.name}}</li>
+  <li
+    *ngIf="notification.type === 'event_invite'"
+    class="list-group-item list-group-item-action"
+  >
+    <span class="message"
+      >Пользователь<a href="#" [routerLink]="['/users', notification.sentBy]">
+        {{ notification.sentByUser.name }}
+      </a>
+      приглашает сыграть с ним в турнире
+      <a href="#" [routerLink]="['/events', notification.eventId]">{{
+        notification.event.name
+      }}</a></span
+    >
+  </li>
+  <li
+    *ngIf="notification.type === 'reject_invite'"
+    class="list-group-item list-group-item-action d-inline-flex align-items-center"
+  >
+    <span class="message">
+      Пользователь
+      <a href="#" [routerLink]="['/users', notification.sentBy]">
+        {{ notification.sentByUser.name }}
+      </a>
+      отклонил вашу заявку
+    </span>
+    <ul class="notification-actions d-inline-flex">
+      <li class="dismiss ml-2">
+        <button
+          type="button"
+          (click)="hideNotification(notification)"
+          class="btn btn-primary"
+        >
+          Скрыть сообщение
+        </button>
+      </li>
+    </ul>
+  </li>
 </ul>
