Added search field to backend, added debounce search on events page

--- a/web/src/app/components/search-event-button/search-event-button.component.html
+++ b/web/src/app/components/search-event-button/search-event-button.component.html
@@ -7,6 +7,7 @@
         aria-describedby="button-addon1"
         class="form-control border-0"
         formControlName="name"
+        (input)="handleChange($event.target.value)"
       />
       <div class="input-group-append">
         <button
