Add image loader popup

--- a/web/src/app/routes/user-page/user-page.component.html
+++ b/web/src/app/routes/user-page/user-page.component.html
@@ -138,4 +138,7 @@
       title="Участвовал в турнирах"
     ></app-user-events-table>
   </div>
+
+  <app-upload-image-button></app-upload-image-button>
 </div>
+
