--- a/web/src/app/routes/user-page/components/user-events-table/user-events-table.component.html
+++ b/web/src/app/routes/user-page/components/user-events-table/user-events-table.component.html
@@ -1,12 +1,20 @@
-<div class="event-grid">
-  <div class="header">{{ title }}</div>
-  <!-- <div class="header-name">Название турнира</div>
-  <div class="header-date">Дата проведения</div> -->
-  <ng-container *ngFor="let event of events; let i = index">
-    <div>{{ i + 1 }}.</div>
-    <div>
-      <a [routerLink]="['/events', event.id]">{{ event.name }}</a>
-    </div>
-    <div>{{ i }}</div>
-  </ng-container>
-</div>
+<table class="table table-hover">
+  <thead>
+    <tr>
+      <th>#</th>
+      <th>Название турнира</th>
+      <th>Количество участий</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let event of events; let i = index">
+      <td>{{ i + 1 }}</td>
+      <td>
+        <a [routerLink]="['/events', event.id]">{{ event.name }}</a>
+      </td>
+      <td>
+        {{ i }}
+      </td>
+    </tr>
+  </tbody>
+</table>
