--- a/web/src/app/routes/user-page/user-page.component.css
+++ b/web/src/app/routes/user-page/user-page.component.css
@@ -1,48 +1,13 @@
-:host {
-  width: 100%;
+.rating {
+  font-size: 16px;
 }
 
-.top-panel {
-  display: grid;
-  position: sticky;
-  top: 0;
-  flex-flow: row wrap;
-  grid-template-columns: 1fr;
-  height: 100px;
+.email {
+  font-size: 16px;
 }
 
-.header {
-  grid-column: 1 / 2;
-  grid-row: 1 / 2;
-}
-
-.buttons {
-  display: flex;
-  flex-direction: row;
-  align-self: center;
-  justify-self: end;
-  margin-right: 20px;
-  grid-column: 1 / 2;
-  grid-row: 1 / 2;
-}
-
-.button {
-  margin: 0 10px;
-}
-
-.user-content {
-  margin: 0px 100px;
-  font-size: 20px;
-}
-
-.rating-info {
-  display: flex;
-  flex-direction: 'row';
-}
-
-.info {
-  display: flex;
-  margin-top: 40px;
+.profile {
+  font-size: 16px;
 }
 
 .ttw {
@@ -53,13 +18,6 @@
   margin-top: 20px;
 }
 
-.rating {
-  margin-left: 20px;
-}
-
-.email {
-  margin-left: 20px;
-}
 
 .events {
   margin-top: 50px;
