--- a/web/src/styles.css
+++ b/web/src/styles.css
@@ -4,8 +4,8 @@
 @import url('https://fonts.googleapis.com/css?family=Rubik');
 @import url('https://fonts.googleapis.com/css?family=PT+Sans+Caption');
 @import url('https://fonts.googleapis.com/css?family=Forum');
-@import "bootstrap.min.css";
-@import "~@ng-select/ng-select/themes/default.theme.css";
+@import 'bootstrap.min.css';
+@import '~@ng-select/ng-select/themes/default.theme.css';
 
 body {
   font-family: Ubuntu, sans-serif;
